# opensesame-extension-osweb

./: .eslintrc.json  .gitignore  pyproject.toml  readme.md  setup.py  stdeb.cfg
jatos/: convert.py  src  sync.py  version_info.py
opensesame_extensions/osweb/: __init__.py
opensesame_extensions/osweb/oswebext/: __init__.py  osweb_control_panel.py  osweb_control_panel.ui  osweb_linter.py  osweb_runner.py  oswebexceptions.py  oswebext.py  oswebext.ui  oswebext_widget.py  oswebwriter.py  preferences.ui
opensesame_extensions/oswebext/: info.json  info.yaml  oswebext.py  oswebext.ui  oswebext_widget.py
opensesame_plugins/inline_html/: info.yaml  inline_html.py
opensesame_plugins/inline_javascript/: info.yaml  inline_javascript.py  javascript_code_edit.py  javascript_workspace_api.py
opensesame_plugins/osweb/: __init__.py
opensesame_plugins/osweb/inline_html/: __init__.py  inline_html.py
opensesame_plugins/osweb/inline_javascript/: __init__.py  inline_javascript.py  javascript_code_edit.py  javascript_workspace_api.py
osweb/: __init__.py  convert.py  data.py  export.py  linter.py  oswebexceptions.py  oswebwriter.py  results.py  sync.py  version_info.py
osweb/src/css/: jatos.css  osweb.00fd6565f59c524e7d96.bundle.css  osweb.00fd6565f59c524e7d96.bundle.css.map  osweb.1.2.0.bundle.css  (+199 more)
test-data/: gaze-cuing.osexp  test-data.txt
tests/: test_data_conversion.py  test_inline_javascript.py  test_jatos.py  test_oswebwriter.py
tests/data/: oswebwriter.osexp  oswebwriter_ref.osexp  test-data.jrzip  test-data.json
translation_tools/: translations.json
(+386 files in other folders)
